fix(history): truncate user id in details tab when too long
Related to CAM-4241

--- a/webapps/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.less
+++ b/webapps/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.less
@@ -60,6 +60,11 @@
   .operation-time {
     margin-bottom: 9px;
   }
+
+  .operation-user {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .date-badge {
